# dfs-rag

./: .gitignore  AGENTS.md  README.md  docker-compose.keycloak.yml  keycloak-client.json  keycloak-realm-import.json  opencode.jsonc  package-lock.json
api/: main.py  pyproject.toml  requirements.txt
api/data/: sessions.db
api/data/sessions/0599a9f0-1d3f-43a1-ab4d-af6edd0b0c5e/: manifest.db
api/dependencies/: auth.py
api/routers/: bootstrap.py  collections.py  files.py  ingestion.py  sessions.py
api/services/: database.py  process_manager.py  sessions_db.py
api/websocket/: manager.py
bootstrap/: .gitignore  README.md  pyproject.toml  validate_manifest.bat  validate_manifest.py  validate_manifest.sh
bootstrap/bootstrap/: __init__.py  __main__.py  config.py  logging_config.py  main.py
bootstrap/bootstrap/database/: __init__.py  connection.py  repository.py  schema.py
bootstrap/bootstrap/discovery/: __init__.py  acl_extractor.py  batch_processor.py  walker.py
bootstrap/bootstrap/models/: __init__.py  file_record.py
frontend/: .env.local  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ProtectedRoute.tsx
frontend/src/lib/: api.ts  auth.tsx  keycloak.ts  websocket.ts
frontend/src/pages/: Bootstrap.tsx  Dashboard.tsx  Files.tsx  Ingestion.tsx  Login.tsx  SessionDashboard.tsx  Sessions.tsx  Settings.tsx
frontend/src/stores/: appStore.ts
frontend/src/types/: index.ts
ingestion/: README.md  ingestion_checkpoint.json  nvdia-rag-client-usage-reference.py  pyproject.toml
ingestion/ingestion/: __init__.py  __main__.py  checkpoint.py  client.py  config.py  main.py  processor.py  repository.py
(+12 files in other folders)
